Merged V2.1 to HEAD    6413: ML copy code switches off the MLPropertyInterceptor whilst copying    6416: WCM-709 CIFS automount comment
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/alfresco/HEAD/root@6422 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261